write function for subcategorizing

--- a/notebooks/category_feat_engineering_development.ipynb
+++ b/notebooks/category_feat_engineering_development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -91,44 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['all purpose flour', 'almond extract', 'almonds', 'applesauce',\n",
-       "       'baking powder', 'baking soda', 'bourbon', 'bread flour',\n",
-       "       'brown rice flour', 'butter', 'cake flour', 'cake mix', 'cinnamon',\n",
-       "       'coconut', 'coconut extract', 'cookie mix', 'coriander',\n",
-       "       'corn syrup', 'cornstarch', 'cream', 'crispy rice', 'egg',\n",
-       "       'espresso', 'flour', 'graham cracker', 'honey', 'instant coffee',\n",
-       "       'lemon juice', 'liquer', 'macadmia', 'maple', 'margarine',\n",
-       "       'marshmallows', 'milk', 'chocolate raisin', 'molasses', 'nestle',\n",
-       "       'nutmeg', 'nuts', 'oat', 'peanut butter', 'peanut butter chips',\n",
-       "       'pecan', 'pudding mix', 'raisins', 'salt', 'shortening',\n",
-       "       'sour cream', 'sugar', 'tartar', 'toffee', 'vanilla',\n",
-       "       'vegetable oil', 'vinegar', 'walnut', 'water', 'wheat',\n",
-       "       'wheat flour', 'white pepper', 'xanthan gum', 'zucchini',\n",
-       "       'light brown sugar', 'dark brown sugar',\n",
-       "       'bittersweet chocolate chip', 'semisweet chocolate chip',\n",
-       "       'dark chocolate chip', 'milk chocolate chip',\n",
-       "       'white chocolate chip'], dtype=object)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unique_ingredients = raw_data[\"Ingredient\"].unique()\n",
-    "unique_ingredients"
+    "unique_ingredients = raw_data[\"Ingredient\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +114,7 @@
        " 'wheat flour']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,13 +124,12 @@
     "for i in unique_ingredients:\n",
     "    if \"flour\" in i:\n",
     "        flour_types.append(i)\n",
-    "\n",
     "flour_types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +143,7 @@
        " 'white chocolate chip']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,21 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['corn syrup',\n",
+       "['sugar',\n",
+       " 'light brown sugar',\n",
+       " 'dark brown sugar',\n",
+       " 'corn syrup',\n",
        " 'honey',\n",
        " 'molasses',\n",
-       " 'sugar',\n",
-       " 'light brown sugar',\n",
-       " 'dark brown sugar']"
+       " 'applesauce']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,10 +184,30 @@
     "for i in unique_ingredients:\n",
     "    if \"sugar\" in i:\n",
     "        sweetener_types.append(i)\n",
-    "    elif any(sweetener in i for sweetener in other_sweeteners):\n",
-    "        sweetener_types.append(i)\n",
-    "sweetener_types\n",
-    "# any(substring in string for substring in substring_list)\n"
+    "\n",
+    "sweetener_types += other_sweeteners\n",
+    "sweetener_types\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['butter', 'margarine', 'shortening', 'vegetable oil']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fat_types = [\"butter\", \"margarine\", \"shortening\", \"vegetable oil\"]\n",
+    "fat_types"
    ]
   },
   {
@@ -224,90 +216,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fats = [\"corn syrup\", \"honey\", \"molasses\", \"applesauce\"]\n",
-    "for i in unique_ingredients:\n",
-    "    if any(fat in i for fat in fats):\n",
-    "        fats.append(i)\n",
-    "fats"
+    "non_other_ingredients = chocolate_types + flour_types + sweetener_types + [\"egg\"] + fat_types\n",
+    "other_ingredients = [item for item in unique_ingredients if item not in non_other_ingredients]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = chocolate_types + flour_types + sweetener_types + [\"egg\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['almond extract',\n",
-       " 'almonds',\n",
-       " 'applesauce',\n",
-       " 'baking powder',\n",
-       " 'baking soda',\n",
-       " 'bourbon',\n",
-       " 'butter',\n",
-       " 'cake mix',\n",
-       " 'cinnamon',\n",
-       " 'coconut',\n",
-       " 'coconut extract',\n",
-       " 'cookie mix',\n",
-       " 'coriander',\n",
-       " 'cornstarch',\n",
-       " 'cream',\n",
-       " 'crispy rice',\n",
-       " 'espresso',\n",
-       " 'graham cracker',\n",
-       " 'instant coffee',\n",
-       " 'lemon juice',\n",
-       " 'liquer',\n",
-       " 'macadmia',\n",
-       " 'maple',\n",
-       " 'margarine',\n",
-       " 'marshmallows',\n",
-       " 'milk',\n",
-       " 'nestle',\n",
-       " 'nutmeg',\n",
-       " 'nuts',\n",
-       " 'oat',\n",
-       " 'peanut butter',\n",
-       " 'peanut butter chips',\n",
-       " 'pecan',\n",
-       " 'pudding mix',\n",
-       " 'raisins',\n",
-       " 'salt',\n",
-       " 'shortening',\n",
-       " 'sour cream',\n",
-       " 'tartar',\n",
-       " 'toffee',\n",
-       " 'vanilla',\n",
-       " 'vegetable oil',\n",
-       " 'vinegar',\n",
-       " 'walnut',\n",
-       " 'water',\n",
-       " 'wheat',\n",
-       " 'white pepper',\n",
-       " 'xanthan gum',\n",
-       " 'zucchini']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# left_over = unique_ingredients.remove(chocolate_types)\n",
-    "left_over = [item for item in unique_ingredients if item not in sub]\n",
-    "left_over"
+    "def sub_categorize_ingredient(ingredient, flour_types, sweetener_types, fat_types, chocolate_types):\n",
+    "    \"\"\"\n",
+    "    Categorizes an ingredient into a specific subcategory based on predefined ingredient types.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ingredient : str\n",
+    "        The ingredient to categorize.\n",
+    "    flour_types : list of str\n",
+    "        A list of ingredients considered as flour.\n",
+    "    sweetener_types : list of str\n",
+    "        A list of ingredients considered as sweeteners.\n",
+    "    fat_types : list of str\n",
+    "        A list of ingredients considered as fats.\n",
+    "    chocolate_types : list of str\n",
+    "        A list of ingredients considered as chocolate.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        The category of the ingredient. Possible values:\n",
+    "        - \"flour\" if the ingredient is in `flour_types`\n",
+    "        - \"sweetener\" if the ingredient is in `sweetener_types`\n",
+    "        - \"fat\" if the ingredient is in `fat_types`\n",
+    "        - \"egg\" if the ingredient is \"egg\"\n",
+    "        - \"chocolate\" if the ingredient is in `chocolate_types`\n",
+    "        - \"other\" if the ingredient does not match any category\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> flour_list = [\"all purpose flour\", \"whole wheat flour\"]\n",
+    "    >>> sweetener_list = [\"sugar\", \"honey\"]\n",
+    "    >>> fat_list = [\"butter\", \"oil\"]\n",
+    "    >>> chocolate_list = [\"cocoa powder\", \"chocolate chips\"]\n",
+    "    \n",
+    "    >>> sub_categorize_ingredient(\"all purpose flour\", flour_list, sweetener_list, fat_list, chocolate_list)\n",
+    "    'flour'\n",
+    "    \n",
+    "    >>> sub_categorize_ingredient(\"honey\", flour_list, sweetener_list, fat_list, chocolate_list)\n",
+    "    'sweetener'\n",
+    "    \n",
+    "    >>> sub_categorize_ingredient(\"egg\", flour_list, sweetener_list, fat_list, chocolate_list)\n",
+    "    'egg'\n",
+    "    \n",
+    "    >>> sub_categorize_ingredient(\"cocoa powder\", flour_list, sweetener_list, fat_list, chocolate_list)\n",
+    "    'chocolate'\n",
+    "    \n",
+    "    >>> sub_categorize_ingredient(\"vanilla extract\", flour_list, sweetener_list, fat_list, chocolate_list)\n",
+    "    'other'\n",
+    "    \"\"\"\n",
+    "    if ingredient in flour_types:\n",
+    "        return \"flour\"\n",
+    "    elif ingredient in sweetener_types:\n",
+    "        return \"sweetener\"\n",
+    "    elif ingredient in fat_types:\n",
+    "        return \"fat\"\n",
+    "    elif ingredient == \"egg\":\n",
+    "        return \"egg\"\n",
+    "    elif ingredient == chocolate_types:\n",
+    "        return \"chocolate\"\n",
+    "    else:\n",
+    "        return \"other\""
    ]
   },
   {
