test function for subcategorizing

--- a/notebooks/category_feat_engineering_development.ipynb
+++ b/notebooks/category_feat_engineering_development.ipynb
@@ -13,10 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Henry's reading in the data function\n",
     "def read_data() -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Reads data from a predefined URL into a Pandas DataFrame.\n",
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,12 +302,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_with_subcategories['']"
+    "data_with_subcategories[\"subcategory\"] = data_with_subcategories[\"Ingredient\"].apply(\n",
+    "    sub_categorize_ingredient,\n",
+    "    args=(flour_types, sweetener_types, fat_types, chocolate_types)\n",
+    ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingredient</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Recipe_Index</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.0 cups all purpose flour</td>\n",
+       "      <td>AR_1</td>\n",
+       "      <td>0.920725</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.8000000000000003 cups all purpose flour</td>\n",
+       "      <td>AR_10</td>\n",
+       "      <td>0.905162</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>1.1076923076923078 cups all purpose flour</td>\n",
+       "      <td>AR_101</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.107692</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.333333333333333 cups sifted all purpose flour</td>\n",
+       "      <td>AR_102</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.0 cups all purpose flour</td>\n",
+       "      <td>AR_103</td>\n",
+       "      <td>0.881250</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Ingredient                                             Text  \\\n",
+       "1  all purpose flour                       3.0 cups all purpose flour   \n",
+       "2  all purpose flour        2.8000000000000003 cups all purpose flour   \n",
+       "3  all purpose flour        1.1076923076923078 cups all purpose flour   \n",
+       "4  all purpose flour  3.333333333333333 cups sifted all purpose flour   \n",
+       "5  all purpose flour                       2.0 cups all purpose flour   \n",
+       "\n",
+       "  Recipe_Index    Rating  Quantity Unit subcategory  \n",
+       "1         AR_1  0.920725  3.000000  cup       flour  \n",
+       "2        AR_10  0.905162  2.800000  cup       flour  \n",
+       "3       AR_101  0.600000  1.107692  cup       flour  \n",
+       "4       AR_102  0.937500  3.333333  cup       flour  \n",
+       "5       AR_103  0.881250  2.000000  cup       flour  "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_with_subcategories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
