write function for categorizing

--- a/notebooks/category_feat_engineering_development.ipynb
+++ b/notebooks/category_feat_engineering_development.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,6 +424,169 @@
     }
    ],
    "source": [
+    "data_with_subcategories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize_ingredient(subcategory):\n",
+    "    \"\"\"\n",
+    "    Categorizes an ingredient subcategory as either 'basic' or 'special'.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    subcategory : str\n",
+    "        The subcategory of the ingredient (e.g., \"flour\", \"sweetener\", \"chocolate\").\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        - \"basic\" if the subcategory is in [\"flour\", \"sweetener\", \"fat\", \"egg\"].\n",
+    "        - \"special\" if the subcategory is in [\"chocolate\", \"other\"].\n",
+    "        - None if the subcategory does not match any known category.\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> categorize_ingredient(\"flour\")\n",
+    "    'basic'\n",
+    "\n",
+    "    >>> categorize_ingredient(\"chocolate\")\n",
+    "    'special'\n",
+    "\n",
+    "    >>> categorize_ingredient(\"spice\")\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    basic_categories = [\"flour\", \"sweetener\", \"fat\", \"egg\"]\n",
+    "    special_categories = [\"chocolate\", \"other\"]\n",
+    "    if subcategory in basic_categories:\n",
+    "        return \"basic\"\n",
+    "    elif subcategory in special_categories:\n",
+    "        return \"special\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingredient</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Recipe_Index</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>subcategory</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.0 cups all purpose flour</td>\n",
+       "      <td>AR_1</td>\n",
+       "      <td>0.920725</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.8000000000000003 cups all purpose flour</td>\n",
+       "      <td>AR_10</td>\n",
+       "      <td>0.905162</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>1.1076923076923078 cups all purpose flour</td>\n",
+       "      <td>AR_101</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.107692</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.333333333333333 cups sifted all purpose flour</td>\n",
+       "      <td>AR_102</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.0 cups all purpose flour</td>\n",
+       "      <td>AR_103</td>\n",
+       "      <td>0.881250</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>cup</td>\n",
+       "      <td>flour</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Ingredient                                             Text  \\\n",
+       "1  all purpose flour                       3.0 cups all purpose flour   \n",
+       "2  all purpose flour        2.8000000000000003 cups all purpose flour   \n",
+       "3  all purpose flour        1.1076923076923078 cups all purpose flour   \n",
+       "4  all purpose flour  3.333333333333333 cups sifted all purpose flour   \n",
+       "5  all purpose flour                       2.0 cups all purpose flour   \n",
+       "\n",
+       "  Recipe_Index    Rating  Quantity Unit subcategory category  \n",
+       "1         AR_1  0.920725  3.000000  cup       flour    basic  \n",
+       "2        AR_10  0.905162  2.800000  cup       flour    basic  \n",
+       "3       AR_101  0.600000  1.107692  cup       flour    basic  \n",
+       "4       AR_102  0.937500  3.333333  cup       flour    basic  \n",
+       "5       AR_103  0.881250  2.000000  cup       flour    basic  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_with_subcategories[\"category\"] = data_with_subcategories[\"subcategory\"].apply(categorize_ingredient)\n",
     "data_with_subcategories.head()"
    ]
   },
