finish converting to category engineering into a script

--- a/notebooks/category_feat_engineering_development.ipynb
+++ b/notebooks/category_feat_engineering_development.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_data = read_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingredient</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Recipe_Index</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.0 cups all purpose flour</td>\n",
+       "      <td>AR_1</td>\n",
+       "      <td>0.920725</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.8000000000000003 cups all purpose flour</td>\n",
+       "      <td>AR_10</td>\n",
+       "      <td>0.905162</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>1.1076923076923078 cups all purpose flour</td>\n",
+       "      <td>AR_101</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.107692</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.333333333333333 cups sifted all purpose flour</td>\n",
+       "      <td>AR_102</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.0 cups all purpose flour</td>\n",
+       "      <td>AR_103</td>\n",
+       "      <td>0.881250</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>4.0 cups semi sweet or milk chocolate chips</td>\n",
+       "      <td>Misc_46</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>0.888888888889 cup milk chocolate chips</td>\n",
+       "      <td>Misc_63</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.888800</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cups semisweet or milk chocolate...</td>\n",
+       "      <td>Misc_70</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1300</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cups milk chocolate chips</td>\n",
+       "      <td>Misc_74</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1301</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cup milk chocolate chips</td>\n",
+       "      <td>Misc_81</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1990 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Ingredient                                               Text  \\\n",
+       "1       all purpose flour                         3.0 cups all purpose flour   \n",
+       "2       all purpose flour          2.8000000000000003 cups all purpose flour   \n",
+       "3       all purpose flour          1.1076923076923078 cups all purpose flour   \n",
+       "4       all purpose flour    3.333333333333333 cups sifted all purpose flour   \n",
+       "5       all purpose flour                         2.0 cups all purpose flour   \n",
+       "...                   ...                                                ...   \n",
+       "1295  milk chocolate chip        4.0 cups semi sweet or milk chocolate chips   \n",
+       "1298  milk chocolate chip            0.888888888889 cup milk chocolate chips   \n",
+       "1299  milk chocolate chip  2.66666666667 cups semisweet or milk chocolate...   \n",
+       "1300  milk chocolate chip            2.66666666667 cups milk chocolate chips   \n",
+       "1301  milk chocolate chip             2.66666666667 cup milk chocolate chips   \n",
+       "\n",
+       "     Recipe_Index    Rating  Quantity Unit  \n",
+       "1            AR_1  0.920725  3.000000  cup  \n",
+       "2           AR_10  0.905162  2.800000  cup  \n",
+       "3          AR_101  0.600000  1.107692  cup  \n",
+       "4          AR_102  0.937500  3.333333  cup  \n",
+       "5          AR_103  0.881250  2.000000  cup  \n",
+       "...           ...       ...       ...  ...  \n",
+       "1295      Misc_46       NaN  4.000000  cup  \n",
+       "1298      Misc_63       NaN  0.888800  cup  \n",
+       "1299      Misc_70       NaN  2.666600  cup  \n",
+       "1300      Misc_74       NaN  2.666600  cup  \n",
+       "1301      Misc_81       NaN  2.666600  cup  \n",
+       "\n",
+       "[1990 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data"
    ]
   },
   {
@@ -293,20 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_with_subcategories = raw_data.copy()"
+    "data_with_categories = raw_data.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_with_subcategories[\"subcategory\"] = data_with_subcategories[\"Ingredient\"].apply(\n",
+    "data_with_categories[\"subcategory\"] = data_with_categories[\"Ingredient\"].apply(\n",
     "    sub_categorize_ingredient,\n",
     "    args=(flour_types, sweetener_types, fat_types, chocolate_types)\n",
     ")\n"
@@ -314,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -418,22 +596,22 @@
        "5       AR_103  0.881250  2.000000  cup       flour  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_with_subcategories.head()"
+    "data_with_categories.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def categorize_ingredient(subcategory):\n",
+    "def categorize_subcategory(subcategory):\n",
     "    \"\"\"\n",
     "    Categorizes an ingredient subcategory as either 'basic' or 'special'.\n",
     "\n",
@@ -451,13 +629,13 @@
     "\n",
     "    Examples\n",
     "    --------\n",
-    "    >>> categorize_ingredient(\"flour\")\n",
+    "    >>> categorize_subcategory(\"flour\")\n",
     "    'basic'\n",
     "\n",
-    "    >>> categorize_ingredient(\"chocolate\")\n",
+    "    >>> categorize_subcategory(\"chocolate\")\n",
     "    'special'\n",
     "\n",
-    "    >>> categorize_ingredient(\"spice\")\n",
+    "    >>> categorize_subcategory(\"spice\")\n",
     "    None\n",
     "    \"\"\"\n",
     "    basic_categories = [\"flour\", \"sweetener\", \"fat\", \"egg\"]\n",
@@ -470,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -580,14 +758,201 @@
        "5       AR_103  0.881250  2.000000  cup       flour    basic  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_with_subcategories[\"category\"] = data_with_subcategories[\"subcategory\"].apply(categorize_ingredient)\n",
-    "data_with_subcategories.head()"
+    "data_with_categories[\"category\"] = data_with_categories[\"subcategory\"].apply(categorize_subcategory)\n",
+    "data_with_categories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_with_categories.to_csv(\"../data/processed/processed_cookie_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingredient</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Recipe_Index</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.0 cups all purpose flour</td>\n",
+       "      <td>AR_1</td>\n",
+       "      <td>0.920725</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.8000000000000003 cups all purpose flour</td>\n",
+       "      <td>AR_10</td>\n",
+       "      <td>0.905162</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>1.1076923076923078 cups all purpose flour</td>\n",
+       "      <td>AR_101</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.107692</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>3.333333333333333 cups sifted all purpose flour</td>\n",
+       "      <td>AR_102</td>\n",
+       "      <td>0.937500</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>all purpose flour</td>\n",
+       "      <td>2.0 cups all purpose flour</td>\n",
+       "      <td>AR_103</td>\n",
+       "      <td>0.881250</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>4.0 cups semi sweet or milk chocolate chips</td>\n",
+       "      <td>Misc_46</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>0.888888888889 cup milk chocolate chips</td>\n",
+       "      <td>Misc_63</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.888800</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cups semisweet or milk chocolate...</td>\n",
+       "      <td>Misc_70</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1300</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cups milk chocolate chips</td>\n",
+       "      <td>Misc_74</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1301</th>\n",
+       "      <td>milk chocolate chip</td>\n",
+       "      <td>2.66666666667 cup milk chocolate chips</td>\n",
+       "      <td>Misc_81</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.666600</td>\n",
+       "      <td>cup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1990 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Ingredient                                               Text  \\\n",
+       "1       all purpose flour                         3.0 cups all purpose flour   \n",
+       "2       all purpose flour          2.8000000000000003 cups all purpose flour   \n",
+       "3       all purpose flour          1.1076923076923078 cups all purpose flour   \n",
+       "4       all purpose flour    3.333333333333333 cups sifted all purpose flour   \n",
+       "5       all purpose flour                         2.0 cups all purpose flour   \n",
+       "...                   ...                                                ...   \n",
+       "1295  milk chocolate chip        4.0 cups semi sweet or milk chocolate chips   \n",
+       "1298  milk chocolate chip            0.888888888889 cup milk chocolate chips   \n",
+       "1299  milk chocolate chip  2.66666666667 cups semisweet or milk chocolate...   \n",
+       "1300  milk chocolate chip            2.66666666667 cups milk chocolate chips   \n",
+       "1301  milk chocolate chip             2.66666666667 cup milk chocolate chips   \n",
+       "\n",
+       "     Recipe_Index    Rating  Quantity Unit  \n",
+       "1            AR_1  0.920725  3.000000  cup  \n",
+       "2           AR_10  0.905162  2.800000  cup  \n",
+       "3          AR_101  0.600000  1.107692  cup  \n",
+       "4          AR_102  0.937500  3.333333  cup  \n",
+       "5          AR_103  0.881250  2.000000  cup  \n",
+       "...           ...       ...       ...  ...  \n",
+       "1295      Misc_46       NaN  4.000000  cup  \n",
+       "1298      Misc_63       NaN  0.888800  cup  \n",
+       "1299      Misc_70       NaN  2.666600  cup  \n",
+       "1300      Misc_74       NaN  2.666600  cup  \n",
+       "1301      Misc_81       NaN  2.666600  cup  \n",
+       "\n",
+       "[1990 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"../data/raw/raw_cookie_data.csv\", index_col=0)"
    ]
   },
   {
